--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     class="label">GitHub</span></a></li>
             </ul>
           </section>
-          <p class="copyright"> &copy; 2024 <a href="https://github.com/xiaowansm5"> &middot; 时光</a> . </p>
+          <p class="copyright"> &copy; 2024 <a href="https://wwang.pw"> &middot; XiaoWanSM</a> . </p>
         </div>
         <div>
           <section>
@@ -59,18 +59,18 @@
     </footer>
   </div>
   <script type="text/javascript">
-    var datas = `美女,2018年07月21日拍摄,http://p3.qhimg.com/bdr/__85/t01a2c69f5b7eeac889.jpg
-美女,2018年07月21日拍摄,./1080p/12.6dz2eefnaq40.jpg
-美女,2018年07月21日拍摄,http://p2.qhimg.com/bdr/__85/t01afc2df45a8320bfb.jpg
-美女,2018年07月21日拍摄,http://p3.qhimg.com/bdr/__85/t01329d8795efdf9539.jpg
-美女,2018年07月21日拍摄,http://p6.qhimg.com/bdr/__85/t017b95ee854e7da6d2.jpg
-美女,2018年07月21日拍摄,http://p0.qhimg.com/bdr/__85/t013a9b5417ecda962e.jpg
-美女,2018年07月21日拍摄,http://p8.qhimg.com/bdr/__85/t011b329f2e0b5232a8.jpg
-美女,2018年07月21日拍摄,http://p7.qhimg.com/bdr/__85/t012fde7a1fd8ad4e5c.jpg
-美女,2018年07月21日拍摄,http://p9.qhimg.com/bdr/__85/t01f6209e46426b4a20.jpg
-美女,2018年07月21日拍摄,http://p9.qhimg.com/bdr/__85/t0121091c6572cf39e0.jpg
-美女,2018年07月21日拍摄,http://p5.qhimg.com/bdr/__85/t01abc7197e61df3c85.jpg
-美女,2018年07月21日拍摄,http://p5.qhimg.com/bdr/__85/t012233dd49c22ce5df.jpg`;
+    var datas = `壁纸,2014年01月20日,./1080p/12122.230s9xdafhpc.jpg
+壁纸,2014年01月20日,./1080p/12.6dz2eefnaq40.jpg
+壁纸,2014年01月20日,./1080p/23.1l2yk7ca1n4w.jpg
+壁纸,2014年01月20日,./1080p/34.65kdz9dyksw0.jpg
+壁纸,2014年01月20日,./1080p/4alho2dqri0.3yhw4kspeme0.jpg
+壁纸,2014年01月20日,./1080p/3amxrq3yf5u.3u13mid1gbo0.jpg
+壁纸,2014年01月20日,./1080p/56.49ddvcn0epm0.jpg
+壁纸,2014年01月20日,./1080p/a0h2uqdpvrq.fmn0wj9fz08.jpg
+壁纸,2014年01月20日,./1080p/fr0wrvcehoj.vlrn43jxqnk.jpg
+壁纸,2014年01月20日,./1080p/h5lj30i5dez.7l99cct9jj00.jpg
+壁纸,2014年01月20日,./1080p/kzwp42umcbs.23joux6xnri8.jpg
+4K,2014年01月20日,./cy/0w3pdr.53xiulpx0dw0.jpg`;
     datas = datas.split("\n");
     for (var i = 0; i < datas.length; i++) {
       datas[i] = datas[i].split(",");
