--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 壁纸,2014年01月20日,./1080p/23.1l2yk7ca1n4w.jpg
 壁纸,2014年01月20日,./1080p/34.65kdz9dyksw0.jpg
 壁纸,2014年01月20日,./1080p/4alho2dqri0.3yhw4kspeme0.jpg
-壁纸,2014年01月20日,./1080p/3amxrq3yf5u.3u13mid1gbo0.jpg
+4K,2014年01月20日,./cy/1060204.5ywj2vjut7s0.jpg
 壁纸,2014年01月20日,./1080p/56.49ddvcn0epm0.jpg
 壁纸,2014年01月20日,./1080p/a0h2uqdpvrq.fmn0wj9fz08.jpg
 壁纸,2014年01月20日,./1080p/fr0wrvcehoj.vlrn43jxqnk.jpg
