--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <h1><a href="https://github.com/xiaowansm5"><strong>时光</strong> </a></h1>
+      <h1><a href="https://wwang.pw"><strong>时光图床</strong> </a></h1>
       <nav>
         <ul>
           <li><a href="https://sfast.cc" class="">返回主页</a></li>
